--- a/templates/user_auth/login.html
+++ b/templates/user_auth/login.html
@@ -6,11 +6,11 @@
 <div class="container-fluid px-0 mx-0 homediv">
  <div class="container col-lg-9 py-5 ">
    <div class="row">
-    <div class="col-lg-6 me-3">
-        <img src="{%static 'images/register.png'%}" class="img-fluid" alt="homepicture">
+    <div class="col-lg-6 me-3 mt-3">
+        <img src="{%static 'images/login.png'%}" height="350"  alt="homepicture">
     </div>
-    <div class="col my-2">
-        <h3 >Register your account</h3><br>
+    <div class="col my-3">
+        <h3 >Login</h3><br>
         <form action="">
             <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -20,16 +20,12 @@
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
               </div>
-              <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Confirm Password">
-                <label for="floatingPassword">Confirm Password</label>
-              </div>
-    
+             
               <div class="mt-5 mb-3">
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="submit" class="btn btn-primary">Sign In</button>
               </div>
         </form>
-          <a href="{% url 'user_auth:login'%}" class="text-primary mt-3">Already registered? Login here.</a>
+          <a href="{% url 'user_auth:register'%}" class="text-primary mt-3">Haven't registered? Register here.</a>
       
     </div>
 
