--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,6 +18,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            {% if user.is_authenticated %}
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item me-3">
                 <a class="nav-link {{homepage}}" aria-current="page" href="/"
@@ -28,33 +29,20 @@
                 <a class="nav-link {{article_page}} " href="/articles">Articles</a>
               </li>
               <li class="nav-item me-3">
-                <a class="nav-link {{tools_page}}" href="#">History</a>
+                <a class="nav-link" href="#">History</a>
               </li>
              
               <li class="nav-item me-3">
-                <a class="nav-link {{about_page}}" href="/ourstory" >Medications</a>
+                <a class="nav-link " href="/" >Medications</a>
               </li>
            
-             <li class="nav-item me-3">
+             <!-- <li class="nav-item me-3">
               <a class="nav-link" href="#"><i class="fa fa-search" ></i></a>
-            </li>
+            </li> -->
 
             
             </ul>
-            <!-- <div class="dropdown me-3">
-              <a
-                class="btn btn-white dropdown-toggle"
-                href="#"
-                role="button"
-                id="dropdownMenuLink"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fa fa-money me-2"></i> Language
-              </a>
-        
-            </div> -->
-            <!-- <div class="dropdown">
+            <div class="dropdown">
               <a
                 class="btn btn-dark dropdown-toggle"
                 href="#"
@@ -63,16 +51,32 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                More
+                {{user.username}}
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Profile</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="#">Logout</a>
                 </li>
               </ul>
-            </div> -->
+            </div>
+            {%else%}
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item me-3">
+                <a class="nav-link {{homepage}}" aria-current="page" href="{% url 'user_auth:register' %}"
+                  >Register</a
+                >
+              </li>
+              <li class="nav-item me-3">
+                <a class="nav-link {{article_page}} " href="{% url 'user_auth:login' %}">Signin</a>
+              </li>
+             
+           
+         
+
+            
+            </ul>
+            {%endif%}
           </div>
         </div>
       </nav>
