--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -56,7 +56,7 @@
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <li><a class="dropdown-item" href="#">Profile</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Logout</a>
+                  <a class="dropdown-item" onclick="return confirm('Are you sure to logout?')" href="{% url 'user_auth:logout'%}">Logout</a>
                 </li>
               </ul>
             </div>
