--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,5 @@
-<div class="mt-2 bg-light p-3 text-center">
-    <p >s-sewa 2023</p>
-</div>
+<footer >
+    <div class="mt-5  text-center footer ">
+        <p class="bg-light p-2 mt-5" >s-sewa ™ 2023 </p>
+    </div>
+</footer>
