--- a/templates/messages.html
+++ b/templates/messages.html
@@ -3,7 +3,7 @@
                     <div class="container-fluid px-0 mx-0  bg-primary ">
                         <div class="container col-lg-11 px-4">
                     <div class="mt-alerts">
-                        <div class="alert alert-dismissible fade show text-center" role="alert">
+                        <div class="alert alert-dismissible fade show text-center text-white" role="alert">
                            {{message}}
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
@@ -20,7 +20,7 @@
                     <div class="container-fluid px-0 mx-0 bg-danger">
                         <div class="container col-lg-11 px-4">
                     <div class=" mt-alerts ">
-                        <div class="alert alert-dismissible fade show text-center" role="alert">
+                        <div class="alert alert-dismissible fade show text-center text-white" role="alert">
                             {{message}} Sorry.
                             <button  type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
