--- a/templates/user_auth/userprofile.html
+++ b/templates/user_auth/userprofile.html
@@ -5,8 +5,15 @@
 <!-- Landing Page Section -->
 <div class="container-fluid px-0 mx-0 homediv">
  <div class="container col-lg-9 py-5 my-5">
-
   <p>User Profile</p>
+  <div class="input-group mb-3">
+    <div style="margin: auto">
+  
+      {{ qrcode|safe }}
+
+    
+    </div>
+  </div>
  </div>
 </div> 
 <!-- Mentioned By thousands. including -->
