--- a/templates/user_auth/userprofile.html
+++ b/templates/user_auth/userprofile.html
@@ -1,22 +1,18 @@
-{% extends '../base.html' %}
-{% load static %}
-{%block bodyblock%}
+{% extends '../base.html' %} {% load static %} {%block bodyblock%}
 
 <!-- Landing Page Section -->
 <div class="container-fluid px-0 mx-0 homediv">
- <div class="container col-lg-9 py-5 my-5">
-  <p>User Profile</p>
-  <div class="input-group mb-3">
-    <div style="margin: auto">
-  
-      {{ qrcode|safe }}
+  <div class="container col-lg-9 py-5 my-5">
+    <p>User Profile</p>
+    <div class="input-group mb-3">
+      <div style="margin: auto">
 
-    
+        <img src="{{qrcode}}" alt="qrcode">
+     
+      </div>
     </div>
   </div>
- </div>
-</div> 
+</div>
 <!-- Mentioned By thousands. including -->
-
 
 {%endblock%}
