add qrcode scan

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,11 +20,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             {% if user.is_authenticated %}
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              {% if request.user.is_patient %}
               <li class="nav-item me-3">
                 <a class="nav-link {{homepage}}" aria-current="page" href="{%url 'user_auth:qr'%}"
                   >QR</a
                 >
               </li>
+              {% else %}
+              <li class="nav-item me-3">
+                <a class="nav-link {{homepage}}" aria-current="page" href="{%url 'user_auth:qrscan'%}"
+                  >Scan QR</a
+                >
+              </li>
+              {%endif%}
               <li class="nav-item me-3">
                 <a class="nav-link {{article_page}} " href="/articles">Articles</a>
               </li>
