--- a/templates/user_auth/qrscan.html
+++ b/templates/user_auth/qrscan.html
@@ -19,6 +19,8 @@
               <input type="file" id="myImageInput" name="image" hidden>
               <button class="mt-2 me-2 btn btn-success" onclick="postData();">Done</button>
             </form>
+            <hr>
+            <center>Or Choose form your device:</center>
 
 
             <form method="post" enctype="multipart/form-data">
