--- a/templates/user_auth/userprofile.html
+++ b/templates/user_auth/userprofile.html
@@ -5,7 +5,7 @@
   <div class="container col-lg-9 py-1 my-3">
     <div class="main">
       <div class="row">
-          <div class="col-lg-7 mb-0">
+          <div class="col-lg-6 me-5 mb-0">
              
               <div class="details">
                 <div class="h2"> Ramesh Paudel </div><br>
@@ -39,12 +39,11 @@
                   </center>
               </div>
           </div>
-          <div class="col-lg-5"> <img class="doctorimg" src="{% static 'images/doctor.png'%}">
+          <div class="col-lg-5 ms-2"> <img class="doctorimg" src="{% static 'images/doctor.png'%}">
               <p class="ss ms-5 text-center"><b>SS</b></p>
               <p class="bigno ms-5 text-center"><b>94</b></p>
           </div>
       </div>
-      <p>hk</p>
   </div>
   </div>
 </div>
