--- a/templates/user_auth/qrscan.html
+++ b/templates/user_auth/qrscan.html
@@ -16,7 +16,7 @@
             <form id="myForm" method="POST" enctype="multipart/form-data">
               {% csrf_token %}
 
-              <input type="file" id="myImageInput" name="image" hidden>
+              <input type="text" id="myImageInput" name="image" hidden>
               <button class="mt-2 me-2 btn btn-success" onclick="postData();">Done</button>
             </form>
             <hr>
