--- a/templates/loader.html
+++ b/templates/loader.html
@@ -1,158 +1,77 @@
-<!-- 
 <style>
-    .loading-page {
-      width: 100%;
-      height: 100%;
-      background: #fdfdfd;
-      overflow: hidden;
-      position: fixed;
-      top: 0;
-      z-index: 9999;
-    }
-    .box-loading {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      z-index: 1;
-      width: 100px;
-      height: 100px;
-      margin: -76px 0 0 -76px;
-      border: 12px solid #FFD800;
-      border-radius: 50%;
-      border-top: 16px solid #14140c52;
-      -webkit-animation: spin 2s linear infinite;
-      animation: spin 2s linear infinite;
-    }
-    
-    @-webkit-keyframes spin {
-      0% { -webkit-transform: rotate(0deg); }
-      100% { -webkit-transform: rotate(360deg); }
-    }
-    
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-    
-    /* Add animation to "page content" */
-    .animate-bottom {
-      position: relative;
-      -webkit-animation-name: animatebottom;
-      -webkit-animation-duration: 1s;
-      animation-name: animatebottom;
-      animation-duration: 1s
-    }
-    
-    @-webkit-keyframes animatebottom {
-      from { bottom:-100px; opacity:0 } 
-      to { bottom:0px; opacity:1 }
-    }
-    
-    @keyframes animatebottom { 
-      from{ bottom:-100px; opacity:0 } 
-      to{ bottom:0; opacity:1 }
-    }
-        
-    
-      
-    </style>
-    
-    <div class="loading-page">
-        <div class="box-loading">
-         
-        </div>
-        
-    </div>
-     -->
-    
-    
+  .loading {
+    /* background-color: #ffffff; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(2);
+}
+.loading svg polyline {
+  fill: none;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+.loading svg polyline#back {
+  stroke: rgba(110,123,242,0.3);
+}
+.loading svg polyline#front {
+  stroke: #6e7bf2;
+  stroke-dasharray: 12, 36;
+  stroke-dashoffset: 48;
+  animation: dash 1s linear infinite;
+}
+@-moz-keyframes dash {
+  62.5% {
+    opacity: 0;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@-webkit-keyframes dash {
+  62.5% {
+    opacity: 0;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@-o-keyframes dash {
+  62.5% {
+    opacity: 0;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes dash {
+  62.5% {
+    opacity: 0;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
 
+</style>
 
-<div class="center-body">
-  <div class="loader-circle-38"></div>
-  </div>
-  
-  <style>
-  .center-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    /****** center box
-    width: 300px;
-    height: 300px;
-    border: solid 1px #aaa; */
-  }
-
-  .loader-circle-38 {
-    position: relative;
-    width: 0;
-    height: 0;
-    margin: 0 auto;
-    animation: loader-circle-38-spin-1 1.2s infinite ease;
-  }
-  .loader-circle-38:before,
-  .loader-circle-38:after {
-    content: "";
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    top: 50%;
-    left: 50%;
-    margin-top: -10px;
-    margin-left: -10px;
-    border-radius: 10px;
-    opacity: 0.9;
-  }
-  .loader-circle-38::before {
-    background: #00a7ce;
-    transform: translate(-0.75em, -0.75em) scale(1);
-    box-shadow: 1.5em 1.5em 0 #72c45a;
-    animation: loader-circle-38-spin-2 1.2s infinite ease;
-  }
-  .loader-circle-38:after {
-    background: #f963a3;
-    transform: translate(0.75em, -0.75em) scale(1);
-    box-shadow: -1.5em 1.5em 0 #ffd15b;
-    animation: loader-circle-38-spin-3 1.2s infinite ease;
-  }
-  @keyframes loader-circle-38-spin-2 {
-    50% {
-      transform: scale(1.3) translate(0, 0);
-      box-shadow: 0 0 0 #72c45a;
-      opacity: 0.8;
-    }
-  }
-  @keyframes loader-circle-38-spin-3 {
-    50% {
-      transform: scale(1.3) translate(0, 0);
-      box-shadow: 0 0 0 #ffd15b;
-      opacity: 0.8;
-    }
-  }
-  @keyframes loader-circle-38-spin-1 {
-    0% {
-      transform: rotate(0deg);
-    }
-    50% {
-      transform: rotate(360deg);
-    }
-    100% {
-      transform: rotate(720deg);
-    }
-  }
-  </style>
+<div class="loading"> 
+  <svg width="40px" height="50px">
+    <polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+    <polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+  </svg>
+</div>
   <script>
     document.onreadystatechange = function() {
        if (document.readyState !== "complete") {
            document.querySelector(
              "body").style.visibility = "hidden";
            document.querySelector(
-             ".center-body").style.visibility = "visible";
+             ".loading").style.visibility = "visible";
        } else {
            document.querySelector(
-             ".center-body").style.display = "none";
+             ".loading").style.display = "none";
            document.querySelector(
              "body").style.visibility = "visible";
        }
