--- a/templates/articles/articlelist.html
+++ b/templates/articles/articlelist.html
@@ -4,8 +4,20 @@
 
 
 <div class="container-fluid px-0 mx-0 homediv">
- <div class="container col-lg-9 py-5 my-5">
-  ArticleList 
+ <div class="container col-lg-9 py-2 my-1">
+    <div class="row">
+        {% for object in object_list %}
+        <div class="col-lg-4 ms-2 article">
+           <a href="{{object.get_absolute_url}}" class="text-decoration-none text-dark">
+            <img src="{{object.image.url}}" class="img-fluid mb-2" alt="{{object.title}}">
+            <h5>{{object.title}}</h5>
+            <p class="fw-light">{{object.excerpt}}</p>
+           </a>
+        </div>
+        {% empty %}
+        <li>No objects yet.</li>
+        {% endfor %}
+    </div>
  </div>
 </div> 
 
