--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
-<footer >
-    <div class="mt-5  text-center footer ">
-        <p class="bg-light p-2 mt-5" >s-sewa ™ 2023 </p>
+<footer class="col-lg-11 mx-auto bg-primary" >
+    <div class="text-center footer ">
+        <p class="text-white p-2 mt-5" >s-sewa ™ 2023 </p>
     </div>
 </footer>
