--- a/templates/articles/articledetail.html
+++ b/templates/articles/articledetail.html
@@ -19,7 +19,7 @@
             {%endfor%}
         </div><hr class="text-muted">
         <div class="mt-5">
-            <h4>Related Articles:</h4><br>
+            <h4>You may also like:</h4><br>
             <div class="row mt-3">
                 {% for y in similar_posts %}
                 <div class="col-lg-3">
@@ -33,7 +33,7 @@
                    
               
                 {%empty%}
-                <p class="text-center my-5">No related posts.</p>
+                <p class="text-center my-5">No similar articles.</p>
                 {%endfor%}
             </div>
             
