--- a/templates/articles/articlelist.html
+++ b/templates/articles/articlelist.html
@@ -6,7 +6,7 @@
 <div class="container-fluid px-0 mx-0 homediv">
  <div class="container col-lg-9 py-2 my-1">
     <div class="row">
-        {% for object in object_list %}
+        {% for object in posts %}
         <div class="col-lg-4 mb-3 article">
            <a href="{{object.get_absolute_url}}" class="text-decoration-none text-dark">
             <img src="{{object.image.url}}" class="img-fluid mb-2" alt="{{object.title}}">
