--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -63,6 +63,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <li><a class="dropdown-item" href="{% url 'user_auth:profile'%}">Profile</a></li>
+                <li><a class="dropdown-item" href="{% url 'articles:articles'%}">Your Articles</a></li>
                 <li><a class="dropdown-item" href="{% url 'articles:addarticle'%}">Request Article</a></li>
                 <li>
                   <a class="dropdown-item" onclick="return confirm('Are you sure to logout?')" href="{% url 'user_auth:logout'%}">Logout</a>
