add medication schedule template

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -41,7 +41,7 @@
               </li>
              
               <li class="nav-item me-3">
-                <a class="nav-link " href="/" >Medications</a>
+                <a class="nav-link " href="{% url 'medication:medicationlist'%}" >Medications</a>
               </li>
            
              <!-- <li class="nav-item me-3">
