--- a/templates/medication/medicationlist.html
+++ b/templates/medication/medicationlist.html
@@ -4,8 +4,17 @@
 
 <!-- Landing Page Section -->
 <div class="container-fluid px-0 mx-0 homediv">
- <div class="container col-lg-9 py-5 my-5">
-    <h4>Your Medication Schedule</h4>
+ <div class="container col-lg-9 py-2 my-2">
+    <h4>Your Medication Schedules</h4>
+    {% for i in object_list %}
+    <ul>{{i.created_date}}</ul>
+    {% for y in i.allmedicines %}
+    <li>{{y.medicine.name}} - {{y.medicine.dose}} mmHg - {{y.desc}} - {{y.timesaday}} - {{y.emptyStomach}} </li>
+    {%endfor%}
+    {%empty%}
+    <p class="text-center my-5 py-5 text-muted">No schedules.</p>
+    {%endfor%}
+
 
  </div>
 </div> 
