--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,19 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             {% if user.is_authenticated %}
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              {% if request.user.is_patient %}
-              <li class="nav-item me-3">
-                <a class="nav-link {{homepage}}" aria-current="page" href="{%url 'qrapp:qr'%}"
-                  >QR</a
-                >
-              </li>
-              {% else %}
-              <li class="nav-item me-3">
-                <a class="nav-link {{homepage}}" aria-current="page" href="{%url 'qrapp:qrscan'%}"
-                  >Scan QR</a
-                >
-              </li>
-              {%endif%}
+              
               <li class="nav-item me-3">
                 <a class="nav-link {{article_page}} " href="/articles">Articles</a>
               </li>
@@ -43,11 +31,25 @@
               <li class="nav-item me-3">
                 <a class="nav-link " href="{% url 'medication:medicationlist'%}" >Medications</a>
               </li>
+              {% if request.user.is_patient %}
+              <li class="nav-item me-3">
+                <a class="nav-link {{homepage}}" aria-current="page" href="{%url 'qrapp:qr'%}"
+                  >QR</a
+                >
+              </li>
+              {% else %}
+              <li class="nav-item dropdown me-2">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Create Records
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="#">Add Health Records</a></li>
+                  <li><a class="dropdown-item" href="{% url  'qrapp:qrscan' action='medicationschedule'  %}">Add Medication Schedule</a></li>
+                </ul>
+              </li>
+              {%endif%}
            
-             <!-- <li class="nav-item me-3">
-              <a class="nav-link" href="#"><i class="fa fa-search" ></i></a>
-            </li> -->
-
+          
             
             </ul>
             <div class="dropdown">
