--- a/templates/medication/medicationlist.html
+++ b/templates/medication/medicationlist.html
@@ -5,8 +5,16 @@
 <!-- Landing Page Section -->
 <div class="container-fluid px-0 mx-0 homediv">
  <div class="container col-lg-7 px-5 my-2">
+  {% if request.user.is_institution %}
+
+    <h3 class="p-0 m-0"><i class="fa-solid fa-clipboard-list text-primary fs-2"></i> &nbsp;  Your Assigned Medication Schedules</h3>
+    <p class="mt-0 ms-5 mb-5 p-0 text-muted cursor">These are the medication schedules you have assigned to the patients. Click on items to see their details.</p>
+
+    {%else%}
     <h3 class="p-0 m-0"><i class="fa-solid fa-clipboard-list text-primary fs-2"></i> &nbsp;  Your Medication Schedules</h3>
     <p class="mt-0 ms-5 mb-5 p-0 text-muted cursor">These are your medication histories. Click on items to see their details.</p>
+
+    {%endif%}
     {% for i in object_list %}
     <div type="button" data-bs-toggle="modal" data-bs-target="#exampleModal{{i.id}}" class="mb-5 cursor" >
       {% if request.user.is_institution %}
