fix history update

--- a/templates/records/updaterecords.html
+++ b/templates/records/updaterecords.html
@@ -11,7 +11,7 @@
         <form method="post" enctype="multipart/form-data">
             {%csrf_token%}
             {% bootstrap_form form layout='floating'  %}
-            <button type="submit" class="btn btn-primary my-3">Send Request</button>
+            <button type="submit" class="btn btn-primary my-3">SAVE</button>
         </form>
     </dir>
  </div>
